* This is a major new release of the plugin, please make sure to back up your site and database
  before your upgrade and make sure to review the changelog to be aware of the implications of
  upgrading to this version.
* Enhances the data model to allow for fine-grained referrals.
* Fixed PHP Notice due to undefined variable $charset_collate.
* Fixed use of deprecated properties with WC 3.x
 
 = 2.18.2 =
* WordPress 4.8 compatibility tested.

= 2.18.1 =
* Added some adjustments for compatibility with WooCommerce 3.0.0.

= 2.18.0 =
* Enhanced the precision with which referral values are stored.
* Added the affiliates_get_referral_amount_decimals() and affiliates_format_referral_amount() functions.
* Fixed the affiliates_referral_amount_decimals filter.
* We now allow to define the constant AFFILIATES_REFERRAL_AMOUNT_DECIMALS in wp-config.php.
* Added the AFFILIATES_REFERRAL_AMOUNT_DECIMALS_DISPLAY constant which can also be overridden in wp-config.php.
* Added the notice class.

= 2.17.1 =
* Fixed user_agents table is not deleted on cleanup.
* Fixed an issue related to showing earnings for certain dates.
* Improved the traffic queries which solves performance issues with large data sets.

= 2.17.0 =
* Added a new Traffic section with URI stats.
* Source URIs and landing URIs are stored for hits on affiliate links.
* User agents are stored for hits on affiliate links.
* Hit stats now show user agents in the Visits & Referrals section.
* Hit stats now show source and landing URIs in the Visits & Referrals section.
* Hit stats now show user agents in the Affiliates & Referrals section.
* Hit stats now show source and landing URIs in the Affiliates & Referrals section.
* Added hit references for referrals.
* Improved request handling to exclude during AJAX.

= 2.16.7 =
* Changing the username related to an affiliate if the username doesn't exist shows an error.
* Added notifications when add/edit/remove affiliates from the dashboard.

= 2.16.6 =