@@ -7,6 +7,8 @@
 * Enhances the data model to allow for fine-grained referrals.
 * Fixed PHP Notice due to undefined variable $charset_collate.
 * Fixed use of deprecated properties with WC 3.x
+* Added the Affiliates Ninja Forms to the integrations.
+* Added formatting options to the affiliate selectize renderer.
  
  = 2.18.2 =
 * WordPress 4.8 compatibility tested.
